[gd_scene load_steps=25 format=2]

[ext_resource path="res://assets/interface/menu_container.png" type="Texture" id=1]
[ext_resource path="res://assets/interface/button_pressed.png" type="Texture" id=2]
[ext_resource path="res://assets/interface/button_normal.png" type="Texture" id=3]
[ext_resource path="res://assets/interface/button_hover.png" type="Texture" id=4]
[ext_resource path="res://assets/interface/button_disabled.png" type="Texture" id=5]
[ext_resource path="res://scripts/management/initial_scene.gd" type="Script" id=6]
[ext_resource path="res://assets/fonts/DungeonFont.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://resources/tile/floor_tile.tres" type="TileSet" id=8]
[ext_resource path="res://resources/tile/wall_tile.tres" type="TileSet" id=9]
[ext_resource path="res://resources/tile/fountain_tile.tres" type="TileSet" id=10]
[ext_resource path="res://scripts/management/parallax_bg.gd" type="Script" id=11]
[ext_resource path="res://scripts/management/char_select_container.gd" type="Script" id=12]
[ext_resource path="res://assets/interface/character_background.png" type="Texture" id=13]
[ext_resource path="res://assets/interface/buttons/button_pressed.png" type="Texture" id=14]
[ext_resource path="res://assets/interface/buttons/button_hover.png" type="Texture" id=15]
[ext_resource path="res://assets/interface/buttons/button_normal.png" type="Texture" id=16]
[ext_resource path="res://assets/interface/buttons/button_disabled.png" type="Texture" id=17]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 12
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
size = 12
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=5]
size = 12
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=6]
size = 12
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=7]
length = 1.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("MaleCharacter:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MaleCharacter:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("FemaleCharacter:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("FemaleCharacter:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[node name="InitialScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuContainer" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -48.0
margin_right = 96.0
margin_bottom = 48.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="MenuContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -26.0
margin_top = -37.0
margin_right = 26.0
margin_bottom = 37.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="TextureButton" parent="MenuContainer/VBox"]
margin_right = 52.0
margin_bottom = 22.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 4 )

[node name="Label" type="Label" parent="MenuContainer/VBox/Play"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -8.5
margin_right = 20.0
margin_bottom = 8.5
custom_fonts/font = SubResource( 1 )
text = "Play"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load" type="TextureButton" parent="MenuContainer/VBox"]
margin_top = 26.0
margin_right = 52.0
margin_bottom = 48.0
disabled = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 5 )

[node name="Label" type="Label" parent="MenuContainer/VBox/Load"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -8.5
margin_right = 20.0
margin_bottom = 8.5
custom_fonts/font = SubResource( 1 )
text = "Load"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="TextureButton" parent="MenuContainer/VBox"]
margin_top = 52.0
margin_right = 52.0
margin_bottom = 74.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 4 )

[node name="Label" type="Label" parent="MenuContainer/VBox/Exit"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -8.5
margin_right = 20.0
margin_bottom = 8.5
custom_fonts/font = SubResource( 1 )
text = "Exit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBg" type="ParallaxBackground" parent="."]
script = ExtResource( 11 )
layer_speed = 10

[node name="BgLayer" type="ParallaxLayer" parent="ParallaxBg"]
motion_mirroring = Vector2( 384, 0 )

[node name="BackgroundTile" type="TileMap" parent="ParallaxBg/BgLayer"]
tile_set = ExtResource( 8 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 131092, 0, 0, 131093, 0, 0, 131094, 0, 0, 131095, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 1, 196616, 0, 0, 196617, 0, 65538, 196618, 0, 0, 196619, 0, 1, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 196628, 0, 0, 196629, 0, 0, 196630, 0, 1, 196631, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 131073, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 262164, 0, 0, 262165, 0, 65538, 262166, 0, 0, 262167, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 65537, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 65538, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 65538, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 327700, 0, 0, 327701, 0, 131072, 327702, 0, 0, 327703, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 65538, 393220, 0, 65536, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 131073, 393226, 0, 2, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 131073, 393235, 0, 0, 393236, 0, 65536, 393237, 0, 0, 393238, 0, 65538, 393239, 0, 0, 458752, 0, 0, 458753, 0, 65537, 458754, 0, 0, 458755, 0, 65537, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 65537, 458761, 0, 0, 458762, 0, 65538, 458763, 0, 0, 458764, 0, 65538, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 0, 131073, 458773, 0, 0, 458774, 0, 0, 458775, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 65537, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 2, 524297, 0, 65537, 524298, 0, 65537, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 65536, 524304, 0, 0, 524305, 0, 65538, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524311, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 1, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 65536, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 65538, 589845, 0, 0, 589846, 0, 65538, 589847, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 655380, 0, 0, 655381, 0, 0, 655382, 0, 0, 655383, 0, 0 )

[node name="WallTile" type="TileMap" parent="ParallaxBg/BgLayer"]
tile_set = ExtResource( 9 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 1, 2, 0, 1, 3, 0, 1, 4, 0, 1, 5, 0, 1, 6, 0, 1, 7, 0, 1, 8, 0, 1, 9, 0, 1, 10, 0, 1, 11, 0, 1, 12, 0, 1, 13, 0, 1, 14, 0, 1, 15, 0, 1, 16, 0, 1, 17, 0, 1, 18, 0, 1, 19, 0, 1, 20, 0, 1, 21, 0, 1, 22, 0, 1, 23, 0, 2, 65536, 0, 65536, 65537, 0, 65537, 65538, 0, 65537, 65539, 0, 65537, 65540, 0, 65537, 65541, 0, 65537, 65542, 0, 65537, 65543, 0, 65537, 65544, 0, 65537, 65545, 0, 65537, 65546, 0, 65537, 65547, 0, 65537, 65548, 0, 65537, 65549, 0, 65537, 65550, 0, 65537, 65551, 0, 65537, 65552, 0, 65537, 65553, 0, 65537, 65554, 0, 65537, 65555, 0, 65537, 65556, 0, 65537, 65557, 0, 65537, 65558, 0, 65537, 65559, 0, 65538, 655360, 0, 0, 655361, 0, 1, 655362, 0, 1, 655363, 0, 1, 655364, 0, 1, 655365, 0, 1, 655366, 0, 1, 655367, 0, 1, 655368, 0, 1, 655369, 0, 1, 655370, 0, 1, 655371, 0, 1, 655372, 0, 1, 655373, 0, 1, 655374, 0, 1, 655375, 0, 1, 655376, 0, 1, 655377, 0, 1, 655378, 0, 1, 655379, 0, 1, 655380, 0, 1, 655381, 0, 1, 655382, 0, 1, 655383, 0, 2, 720896, 0, 65536, 720897, 0, 65537, 720898, 0, 65537, 720899, 0, 65537, 720900, 0, 65537, 720901, 0, 65537, 720902, 0, 65537, 720903, 0, 65537, 720904, 0, 65537, 720905, 0, 65537, 720906, 0, 65537, 720907, 0, 65537, 720908, 0, 65537, 720909, 0, 65537, 720910, 0, 65537, 720911, 0, 65537, 720912, 0, 65537, 720913, 0, 65537, 720914, 0, 65537, 720915, 0, 65537, 720916, 0, 65537, 720917, 0, 65537, 720918, 0, 65537, 720919, 0, 65538 )

[node name="FountainTile" type="TileMap" parent="ParallaxBg/BgLayer"]
tile_set = ExtResource( 10 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 7, 1, 0, 11, 0, 0, 12, 1, 0, 16, 0, 0 )

[node name="CharSelectContainer" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}
char_stats = {
"Elf": {
"Agi": 6,
"Dex": 7,
"Str": 3,
"Vit": 4
},
"Knight": {
"Agi": 3,
"Dex": 3,
"Str": 7,
"Vit": 5
},
"Lizard": {
"Agi": 3,
"Dex": 4,
"Str": 5,
"Vit": 6
},
"Wizzard": {
"Agi": 6,
"Dex": 8,
"Str": 1,
"Vit": 3
}
}
char_list = [ [ "res://assets/characters/elf_f/elf_f_spritesheet.png", "res://assets/characters/elf_m/elf_m_spritesheet.png" ], [ "res://assets/characters/knight_f/knight_f_spritesheet.png", "res://assets/characters/knight_m/knight_m_spritesheet.png" ], [ "res://assets/characters/lizard_f/lizard_f_spritesheet.png", "res://assets/characters/lizard_m/lizard_m_spritesheet.png" ], [ "res://assets/characters/wizzard_f/wizzard_f_spritesheet.png", "res://assets/characters/wizzard_m/wizzard_m_spritesheet.png" ] ]
char_name = [ "Elf", "Knight", "Lizard", "Wizzard" ]

[node name="Background" type="TextureRect" parent="CharSelectContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -48.0
margin_right = 96.0
margin_bottom = 48.0
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClassName" type="Label" parent="CharSelectContainer/Background"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -30.0
margin_top = 10.0
margin_right = 30.0
margin_bottom = 17.0
rect_min_size = Vector2( 60, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.282353, 0.231373, 0.227451, 1 )
text = "Lizard"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClassStats" type="Label" parent="CharSelectContainer/Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_right = 30.0
margin_bottom = 8.5
rect_min_size = Vector2( 60, 0 )
custom_fonts/font = SubResource( 2 )
text = "Stats"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="TextureButton" parent="CharSelectContainer/Background" groups=[
"Button",
]]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 14.0
margin_top = -11.0
margin_right = 14.0
margin_bottom = 11.0
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 15 )
texture_disabled = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="TextureButton" parent="CharSelectContainer/Background" groups=[
"Button",
]]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -14.0
margin_top = -11.0
margin_bottom = 11.0
rect_scale = Vector2( -1, 1 )
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 15 )
texture_disabled = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="CharSelectContainer/Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = 16.0
margin_right = 80.0
margin_bottom = 6.5
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stat1" type="Label" parent="CharSelectContainer/Background/HBox"]
margin_right = 40.0
margin_bottom = 29.0
rect_min_size = Vector2( 40, 0 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.282353, 0.231373, 0.227451, 1 )
text = "Str
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stat2" type="Label" parent="CharSelectContainer/Background/HBox"]
margin_left = 40.0
margin_right = 80.0
margin_bottom = 29.0
rect_min_size = Vector2( 40, 0 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.282353, 0.231373, 0.227451, 1 )
text = "Dex
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stat3" type="Label" parent="CharSelectContainer/Background/HBox"]
margin_left = 80.0
margin_right = 120.0
margin_bottom = 29.0
rect_min_size = Vector2( 40, 0 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.282353, 0.231373, 0.227451, 1 )
text = "Vit
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stat4" type="Label" parent="CharSelectContainer/Background/HBox"]
margin_left = 120.0
margin_right = 160.0
margin_bottom = 29.0
rect_min_size = Vector2( 40, 0 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.282353, 0.231373, 0.227451, 1 )
text = "Agi
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaleCharacter" type="Sprite" parent="CharSelectContainer"]
position = Vector2( 162, 80 )
hframes = 9

[node name="Male" type="TextureButton" parent="CharSelectContainer/MaleCharacter" groups=[
"Button",
]]
margin_left = -8.0
margin_right = 8.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FemaleCharacter" type="Sprite" parent="CharSelectContainer"]
position = Vector2( 222, 80 )
hframes = 9

[node name="Female" type="TextureButton" parent="CharSelectContainer/FemaleCharacter" groups=[
"Button",
]]
margin_left = -8.0
margin_right = 8.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Animation" type="AnimationPlayer" parent="CharSelectContainer"]
autoplay = "CharacterSprite"
anims/CharacterSprite = SubResource( 7 )
